--- a/LavanderiaSistVenta/jasper/ticket.jrxml
+++ b/LavanderiaSistVenta/jasper/ticket.jrxml
@@ -51,6 +51,8 @@
 	<parameter name="isTicket" class="java.lang.Boolean"/>
 	<parameter name="pSaldo" class="java.lang.String"/>
 	<parameter name="pAnticipo" class="java.lang.String"/>
+	<parameter name="pFechaActual" class="java.lang.String"/>
+	<parameter name="pFechaRecojo" class="java.lang.String"/>
 	<field name="cantidad" class="java.lang.String"/>
 	<field name="nro" class="java.lang.String"/>
 	<field name="um" class="java.lang.String"/>
@@ -119,9 +121,9 @@
 	<pageHeader>
 		<band height="122" splitType="Stretch">
 			<textField>
-				<reportElement x="73" y="4" width="100" height="14" uuid="a8e2540c-3704-4f80-8c20-061b10b342d8"/>
-				<textElement>
-					<font fontName="SansSerif" size="9"/>
+				<reportElement x="63" y="4" width="110" height="14" uuid="a8e2540c-3704-4f80-8c20-061b10b342d8"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{ruc_dniCliente}]]></textFieldExpression>
 			</textField>
@@ -140,51 +142,51 @@
 				<text><![CDATA[CLIENTE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2" y="36" width="71" height="14" uuid="1540bcde-e2bd-436d-a4d8-554110325c5f"/>
+				<reportElement x="2" y="36" width="55" height="14" uuid="1540bcde-e2bd-436d-a4d8-554110325c5f"/>
 				<textElement>
 					<font fontName="SansSerif" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DIRECCION]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="75" y="20" width="127" height="14" uuid="4f90173f-4dcb-43b0-985e-8eccf20a734d"/>
-				<textElement>
-					<font fontName="SansSerif" size="9"/>
+				<reportElement x="63" y="20" width="139" height="16" uuid="4f90173f-4dcb-43b0-985e-8eccf20a734d"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{nombreCliente}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="75" y="36" width="128" height="14" uuid="fb057f01-5feb-4909-b66f-09984aaf291f"/>
-				<textElement>
-					<font fontName="SansSerif" size="9"/>
+				<reportElement x="63" y="36" width="140" height="18" uuid="fb057f01-5feb-4909-b66f-09984aaf291f"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{direccionCliente}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="2" y="53" width="69" height="14" uuid="49c889c5-ab31-4ab2-85d4-01dfd81a838b"/>
+				<reportElement x="2" y="54" width="55" height="14" uuid="49c889c5-ab31-4ab2-85d4-01dfd81a838b"/>
 				<textElement>
 					<font fontName="SansSerif" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[F. EMISION]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2" y="69" width="66" height="14" uuid="53c9f892-9cfc-4fcc-8fb2-65ba39580200"/>
+				<reportElement x="2" y="70" width="55" height="14" uuid="53c9f892-9cfc-4fcc-8fb2-65ba39580200"/>
 				<textElement>
 					<font fontName="SansSerif" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[MONEDA]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="75" y="68" width="100" height="14" uuid="87e47d77-0ff9-45cd-b300-27cd6d04ce96"/>
-				<textElement>
-					<font fontName="SansSerif" size="9"/>
+				<reportElement x="63" y="70" width="112" height="14" uuid="87e47d77-0ff9-45cd-b300-27cd6d04ce96"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{moneda}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="75" y="52" width="100" height="15" uuid="b244de18-55a4-4722-9543-b8bcb1570381"/>
-				<textElement>
-					<font fontName="SansSerif" size="9"/>
+				<reportElement x="63" y="54" width="112" height="15" uuid="b244de18-55a4-4722-9543-b8bcb1570381"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{pFechaEmision}]]></textFieldExpression>
 			</textField>
@@ -248,7 +250,7 @@
 				<reportElement x="2" y="0" width="26" height="16" uuid="45ca2465-8446-4413-b826-3e7ff3f85c63"/>
 				<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1"/>
 				<textElement textAlignment="Center">
-					<font fontName="SansSerif" size="9" isBold="false"/>
+					<font fontName="SansSerif" size="8" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{cantidad}]]></textFieldExpression>
 			</textField>
@@ -256,7 +258,7 @@
 				<reportElement x="148" y="0" width="26" height="16" uuid="0ca1fbdb-0938-48ca-b14d-764d6ac3488c"/>
 				<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1"/>
 				<textElement textAlignment="Right">
-					<font fontName="SansSerif" size="9" isBold="false"/>
+					<font fontName="SansSerif" size="8" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{pu}]]></textFieldExpression>
 			</textField>
@@ -264,7 +266,7 @@
 				<reportElement x="28" y="0" width="121" height="16" uuid="7171b7d5-1d4b-4f17-b504-a6ffd1a9591d"/>
 				<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1"/>
 				<textElement>
-					<font fontName="SansSerif" size="9" isBold="false"/>
+					<font fontName="SansSerif" size="8" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{descripcion}]]></textFieldExpression>
 			</textField>
@@ -272,7 +274,7 @@
 				<reportElement x="175" y="0" width="29" height="16" uuid="7bb5ba91-390a-4229-a68e-c376c7ff2d9a"/>
 				<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1"/>
 				<textElement textAlignment="Right">
-					<font fontName="SansSerif" size="9"/>
+					<font fontName="SansSerif" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{importe}]]></textFieldExpression>
 			</textField>
@@ -419,9 +421,11 @@
 		</band>
 	</columnFooter>
 	<pageFooter>
-		<band height="347" splitType="Stretch">
+		<band height="341" splitType="Stretch">
 			<textField textAdjust="StretchHeight">
-				<reportElement stretchType="RelativeToTallestObject" x="5" y="233" width="196" height="104" isRemoveLineWhenBlank="true" uuid="d43f9977-575f-4d14-aed6-073eef504609"/>
+				<reportElement stretchType="RelativeToTallestObject" x="2" y="268" width="200" height="68" isRemoveLineWhenBlank="true" uuid="d43f9977-575f-4d14-aed6-073eef504609">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
 				<textElement textAlignment="Center">
 					<font size="9"/>
 				</textElement>
@@ -449,7 +453,7 @@
 				<textField>
 					<reportElement x="3" y="115" width="196" height="14" uuid="59eaacb7-aa99-42a7-9b3e-91cb9291bd0b"/>
 					<textElement textAlignment="Center">
-						<font fontName="SansSerif" size="9"/>
+						<font fontName="SansSerif" size="7"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$P{presolucion}]]></textFieldExpression>
 				</textField>
@@ -462,13 +466,13 @@
 				<textField>
 					<reportElement x="3" y="129" width="196" height="14" uuid="4699bfa3-729b-4c0d-bc9f-b0ccbfae6fbd"/>
 					<textElement textAlignment="Center">
-						<font fontName="SansSerif" size="9"/>
+						<font fontName="SansSerif" size="7"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$P{tipoDocFooter}]]></textFieldExpression>
 				</textField>
 			</frame>
 			<frame>
-				<reportElement stretchType="RelativeToTallestObject" x="1" y="157" width="200" height="38" isRemoveLineWhenBlank="true" uuid="a159447f-0c2b-4e70-bec8-77c443daef90">
+				<reportElement stretchType="RelativeToTallestObject" x="1" y="157" width="200" height="72" isRemoveLineWhenBlank="true" uuid="a159447f-0c2b-4e70-bec8-77c443daef90">
 					<printWhenExpression><![CDATA[$P{isTicket}? Boolean.TRUE : Boolean.FALSE]]></printWhenExpression>
 				</reportElement>
 				<staticText>
@@ -513,48 +517,76 @@
 					</textElement>
 					<textFieldExpression><![CDATA[$P{pSaldo}]]></textFieldExpression>
 				</textField>
+				<staticText>
+					<reportElement x="3" y="50" width="59" height="14" uuid="6a3e0c95-b118-4d60-a8c7-fd7e08910b6e"/>
+					<textElement textAlignment="Left">
+						<font fontName="SansSerif" size="9" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Fecha recojo:]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="3" y="36" width="59" height="14" uuid="d81d69d0-bb8d-4535-a241-72b88df443a9"/>
+					<textElement textAlignment="Left">
+						<font fontName="SansSerif" size="9" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Fecha actual:]]></text>
+				</staticText>
+				<textField>
+					<reportElement x="116" y="36" width="82" height="14" uuid="b9a8053a-6272-4c77-8bd0-d33504759f03"/>
+					<textElement textAlignment="Left">
+						<font fontName="SansSerif" size="9"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$P{pFechaActual}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement x="116" y="50" width="82" height="14" uuid="37f7ca7e-e50e-42ab-8d31-6035f92e940c"/>
+					<textElement textAlignment="Left">
+						<font fontName="SansSerif" size="9"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$P{pFechaRecojo}]]></textFieldExpression>
+				</textField>
 			</frame>
 			<frame>
-				<reportElement stretchType="RelativeToTallestObject" x="1" y="197" width="200" height="33" isRemoveLineWhenBlank="true" uuid="c1956c87-dce7-417c-bd03-443b0d7ee58f">
+				<reportElement stretchType="RelativeToTallestObject" x="1" y="232" width="200" height="33" isRemoveLineWhenBlank="true" uuid="c1956c87-dce7-417c-bd03-443b0d7ee58f">
 					<printWhenExpression><![CDATA[$P{isTicket}? Boolean.FALSE : Boolean.TRUE]]></printWhenExpression>
 				</reportElement>
 				<staticText>
-					<reportElement x="3" y="3" width="71" height="14" uuid="b6e8726b-8f13-45b6-a5b7-2b4d9bfb57bc"/>
+					<reportElement x="3" y="2" width="71" height="14" uuid="b6e8726b-8f13-45b6-a5b7-2b4d9bfb57bc"/>
 					<textElement textAlignment="Left">
 						<font fontName="SansSerif" size="9" isBold="true"/>
 					</textElement>
 					<text><![CDATA[Recibido]]></text>
 				</staticText>
 				<textField>
-					<reportElement x="149" y="3" width="50" height="14" uuid="ce6e84ff-d0a3-4108-a961-602c2e3476b7"/>
+					<reportElement x="149" y="2" width="50" height="14" uuid="ce6e84ff-d0a3-4108-a961-602c2e3476b7"/>
 					<textElement textAlignment="Right">
 						<font fontName="SansSerif" size="9"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$P{pRecibido}]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement x="116" y="3" width="16" height="14" uuid="8a4becf8-80de-4437-8573-bdb659221275"/>
+					<reportElement x="116" y="2" width="16" height="14" uuid="8a4becf8-80de-4437-8573-bdb659221275"/>
 					<textElement>
 						<font fontName="SansSerif" size="9" isBold="false"/>
 					</textElement>
 					<text><![CDATA[S/.]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="3" y="17" width="71" height="14" uuid="dbfd00d3-d609-4ea9-a9f2-53f2c5b4e2f7"/>
+					<reportElement x="3" y="16" width="71" height="14" uuid="dbfd00d3-d609-4ea9-a9f2-53f2c5b4e2f7"/>
 					<textElement textAlignment="Left">
 						<font fontName="SansSerif" size="9" isBold="true"/>
 					</textElement>
 					<text><![CDATA[Vuelto]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="116" y="17" width="16" height="14" uuid="41e6dc91-2a69-43d0-beeb-ce4998e585b5"/>
+					<reportElement x="116" y="16" width="16" height="14" uuid="41e6dc91-2a69-43d0-beeb-ce4998e585b5"/>
 					<textElement>
 						<font fontName="SansSerif" size="9" isBold="false"/>
 					</textElement>
 					<text><![CDATA[S/.]]></text>
 				</staticText>
 				<textField>
-					<reportElement x="149" y="17" width="50" height="14" uuid="f690280e-6ac6-4876-b7cc-86b63c723115"/>
+					<reportElement x="149" y="16" width="50" height="14" uuid="f690280e-6ac6-4876-b7cc-86b63c723115"/>
 					<textElement textAlignment="Right">
 						<font fontName="SansSerif" size="9"/>
 					</textElement>
