--- a/LavanderiaSistVenta/src/FormInternos/JIListaVentasPendientes.form
+++ b/LavanderiaSistVenta/src/FormInternos/JIListaVentasPendientes.form
@@ -860,6 +860,9 @@
           <Properties>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tbxPorcentajeDetraccionActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel21">
           <Properties>
@@ -868,6 +871,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="tbxMontoDetraccion">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
         </Component>
