--- a/LavanderiaSistVenta/jasper/ticket.jrxml
+++ b/LavanderiaSistVenta/jasper/ticket.jrxml
@@ -53,6 +53,7 @@
 	<parameter name="pAnticipo" class="java.lang.String"/>
 	<parameter name="pFechaActual" class="java.lang.String"/>
 	<parameter name="pFechaRecojo" class="java.lang.String"/>
+	<parameter name="pFormaPago" class="java.lang.String"/>
 	<field name="cantidad" class="java.lang.String"/>
 	<field name="nro" class="java.lang.String"/>
 	<field name="um" class="java.lang.String"/>
@@ -121,70 +122,82 @@
 	<pageHeader>
 		<band height="122" splitType="Stretch">
 			<textField>
-				<reportElement x="63" y="4" width="110" height="14" uuid="a8e2540c-3704-4f80-8c20-061b10b342d8"/>
+				<reportElement x="63" y="4" width="110" height="12" uuid="a8e2540c-3704-4f80-8c20-061b10b342d8">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{ruc_dniCliente}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="2" y="4" width="55" height="14" uuid="50a0433d-679e-4952-b624-4c11d26e763f"/>
+				<reportElement x="2" y="4" width="55" height="11" uuid="50a0433d-679e-4952-b624-4c11d26e763f">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
 				<textElement>
-					<font fontName="SansSerif" size="9" isBold="true"/>
+					<font fontName="SansSerif" size="7" isBold="true"/>
 				</textElement>
 				<text><![CDATA[RUC/DNI]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2" y="20" width="55" height="14" uuid="67851f97-f909-40a8-93b7-d880f734b3a9"/>
+				<reportElement x="2" y="17" width="55" height="11" uuid="67851f97-f909-40a8-93b7-d880f734b3a9"/>
 				<textElement>
-					<font fontName="SansSerif" size="9" isBold="true"/>
+					<font fontName="SansSerif" size="7" isBold="true"/>
 				</textElement>
 				<text><![CDATA[CLIENTE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2" y="36" width="55" height="14" uuid="1540bcde-e2bd-436d-a4d8-554110325c5f"/>
+				<reportElement x="2" y="30" width="55" height="11" uuid="1540bcde-e2bd-436d-a4d8-554110325c5f"/>
 				<textElement>
-					<font fontName="SansSerif" size="9" isBold="true"/>
+					<font fontName="SansSerif" size="7" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DIRECCION]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="63" y="20" width="139" height="16" uuid="4f90173f-4dcb-43b0-985e-8eccf20a734d"/>
+				<reportElement x="63" y="16" width="139" height="12" uuid="4f90173f-4dcb-43b0-985e-8eccf20a734d">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{nombreCliente}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="63" y="36" width="140" height="18" uuid="fb057f01-5feb-4909-b66f-09984aaf291f"/>
+				<reportElement x="63" y="29" width="140" height="12" uuid="fb057f01-5feb-4909-b66f-09984aaf291f">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{direccionCliente}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="2" y="54" width="55" height="14" uuid="49c889c5-ab31-4ab2-85d4-01dfd81a838b"/>
+				<reportElement x="2" y="43" width="55" height="11" uuid="49c889c5-ab31-4ab2-85d4-01dfd81a838b"/>
 				<textElement>
-					<font fontName="SansSerif" size="9" isBold="true"/>
+					<font fontName="SansSerif" size="7" isBold="true"/>
 				</textElement>
 				<text><![CDATA[F. EMISION]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2" y="70" width="55" height="14" uuid="53c9f892-9cfc-4fcc-8fb2-65ba39580200"/>
+				<reportElement x="2" y="56" width="55" height="11" uuid="53c9f892-9cfc-4fcc-8fb2-65ba39580200"/>
 				<textElement>
-					<font fontName="SansSerif" size="9" isBold="true"/>
+					<font fontName="SansSerif" size="7" isBold="true"/>
 				</textElement>
 				<text><![CDATA[MONEDA]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="63" y="70" width="112" height="14" uuid="87e47d77-0ff9-45cd-b300-27cd6d04ce96"/>
+				<reportElement x="63" y="55" width="112" height="12" uuid="87e47d77-0ff9-45cd-b300-27cd6d04ce96">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{moneda}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="63" y="54" width="112" height="15" uuid="b244de18-55a4-4722-9543-b8bcb1570381"/>
+				<reportElement x="63" y="42" width="112" height="12" uuid="b244de18-55a4-4722-9543-b8bcb1570381">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="7"/>
 				</textElement>
@@ -210,6 +223,22 @@
 			<line>
 				<reportElement x="2" y="118" width="202" height="1" uuid="bc4595dd-e419-406f-85ad-4cd0ef55250c"/>
 			</line>
+			<staticText>
+				<reportElement x="2" y="70" width="55" height="11" uuid="a26dabad-e391-43ae-aef7-fb108b92c666"/>
+				<textElement>
+					<font fontName="SansSerif" size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[FORMA PAGO]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="63" y="69" width="112" height="12" uuid="b52aea90-758b-4e09-af3f-1d116d7e3206">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<textElement verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{pFormaPago}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -446,7 +475,7 @@
 				<textField>
 					<reportElement x="3" y="143" width="196" height="14" uuid="20345d27-b8bf-4996-abc2-bf94e0323c29"/>
 					<textElement textAlignment="Center">
-						<font fontName="SansSerif" size="9"/>
+						<font fontName="SansSerif" size="7"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$P{ppagina}]]></textFieldExpression>
 				</textField>
