--- a/LavanderiaSistVenta/src/FormInternos/JIClientes.form
+++ b/LavanderiaSistVenta/src/FormInternos/JIClientes.form
@@ -407,6 +407,9 @@
                 <Property name="hint" type="java.lang.String" value="Ingrese su DNI"/>
                 <Property name="length" type="int" value="11"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtfdDniActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel4">
               <Properties>
